[package]
authors = ["blckswan <theblckswan@protonmail.com>"]
name = "iterm420"
version = "4.2.0"
description = "The library for using iTerm422 escape codes"
repository = "https://github.com/blcksec/iterm420"
homepage = "https://github.com/blcksec/iterm420"
readme = "README.md"
license = "MIT"
edition = "2018"

keywords = [
    "terminal",
]

[dependencies]
base64 = "0.13.0"
